Updates OIDCProviderMetadata for URI support (issue #79)